--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <p>
+        Lorem ipsum dolor sit <span class="larger">amet</span>  consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
+    </p>
+    <p class="different_paragraphs">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
+    </p>
+    <p class="different_paragraphs">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet <span class="larger">consectetur</span> adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
+    </p>
+    <p class="different_paragraphs" id=unique_paragraph>
+        Lorem ipsum dolor sit amet consectetur <span class="larger" id="yellow">adipisicing</span> elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
+    </p>
+
 </body>
 </html>
