--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
     </p>
     <p>
-        Lorem ipsum dolor sit amet <span class="larger">consectetur</span> adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
+        Lorem ipsum dolor sit amet <span class="larger">consectetur</span>consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
     </p>
     <p class="different_paragraphs" id=unique_paragraph>
         Lorem ipsum dolor sit amet consectetur <span class="larger" id="yellow">adipisicing</span> elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
