--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
 </head>
 <body>
     <p>
-        Lorem ipsum dolor sit <span class="larger">amet</span>  consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
+        Lorem ipsum dolor sit <span larger="_blank">amet</span>  consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
     </p>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
     </p>
-    <p class="different_paragraphs">
+    <p different_paragraphs="_blank">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
     </p>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
     </p>
-    <p class="different_paragraphs">
+    <p different_paragraphs="_blank">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
     </p>
     <p>
-        Lorem ipsum dolor sit amet <span class="larger">consectetur</span>consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
+        Lorem ipsum dolor sit amet <span larger="_blank">consectetur</span> adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
     </p>
-    <p class="different_paragraphs" id=unique_paragraph>
-        Lorem ipsum dolor sit amet consectetur <span class="larger" id="yellow">adipisicing</span> elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
+    <p different_paragraphs="_blank" unique_paragraph="_blank">
+        Lorem ipsum dolor sit amet consectetur <span larger="_blank" yellow="_blank">adipisicing</span> elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
     </p>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ut modi expedita quos maiores voluptates, quidem rerum aspernatur alias officiis laboriosam eaque doloremque iste voluptate dolorum hic ullam qui molestiae.
